<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="android_dev">https://practicum.yandex.ru/android-developer/</string>
    <string name="android_dev1">Поделиться ссылкой</string>
    <string name="email_xtra">"student@example.com"</string>
    <string name="subject_xtra">"Сообщение разработчикам и разработчицам приложения Playlist Maker"</string>
    <string name="text_xtra">"Спасибо разработчикам и разработчицам за крутое приложение!"</string>
    <string name="user_agreement_url">"https://yandex.ru/legal/practicum_offer/"</string>
    <string name="back">Назад</string>
    <string name="clear">Очистить</string>
    <string name="no_result">Ничего не нашлось</string>
    <string name="no_network">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="renew">Обновить</string>
    <string name="history">Вы искали</string>
    <string name="history_clear">Очистить историю</string>
    <string name="time">Длительность </string>
    <string name="album">Альбом</string>
    <string name="release">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="play_time">00:00</string>
    <string name="media_empty">Ваша медиатека пуста</string>
    <string name="playlist_empty">Вы не создали ни одного плейлиста</string>
    <string name="playlist_new">Новый плейлист</string>
    <string name="tab_favorites">Избранные треки</string>
    <string name="tab_playlists">Плейлисты</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="add_to_pl">Добавить в плейлист</string>
    <string name="added_to_pl">Добавлено в плейлист %1$s</string>
    <string name="alrdy_added_to_pl">Трек уже добавлен в плейлист %1$s</string>
    <string name="dialog_exit_title">Завершить создание плейлиста?</string>
    <string name="dialog_exit_message">Все несохраненные данные будут потеряны</string>
    <string name="dialog_exit_cancel">Отмена</string>
    <string name="dialog_exit_confirm">Завершить</string>
    <string name="pl_created">Плейлист "%1$s" создан</string>
    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="minutes_count">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
    <string name="pl_edit_info">Редактировать информацию</string>
    <string name="pl_delete">Удалить плейлист</string>
    <string name="pl_share">Поделиться</string>
    <string name="pl_empty">В этом плейлисте нет треков</string>
    <string name="pl_delete_title">Хотите удалить трек?</string>
    <string name="pl_delete_negative">Нет</string>
    <string name="pl_delete_positive">Да</string>
    <string name="pl_delete_playlist_title">Удалить плейлист</string>
    <string name="pl_delete_playlist_msg">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="dialog_delete">Удалить</string>
    <string name="pl_is_empty">В этом плейлисте нет списа треков, которым можно поделиться!</string>
    <string name="dot"> •</string>
    <string name="edit_playlist_new">Редактировать</string>
    <string name="save">Сохранить</string>


</resources>