<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"






    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/app_name"
        style="@style/button_main"
        android:gravity="start"
        android:textColor="@color/white"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin_supp"
            android:layout_weight="1"
            android:id="@+id/search_button"
            android:text="@string/search"
            app:icon="@drawable/ic_search_24"
            style="@style/button_main"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_supp"
            android:layout_marginBottom="@dimen/margin_supp"
            android:layout_weight="1"
            android:id="@+id/media_button"
            android:text="@string/media"
            app:icon="@drawable/ic_media_24"
            style="@style/button_main"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_supp"
            android:layout_weight="1"
            android:text="@string/settings"
            android:id="@+id/settings_button"
            app:icon="@drawable/ic_settings_24"
            style="@style/button_main"
            />

    </LinearLayout>

</LinearLayout>
