<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context=".ui.settings.fragment.SettingsFragment">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_medium"
            android:textAllCaps="false"
            android:textColor="@color/text_menu"
            android:text="@string/settings"
            android:textSize="@dimen/text_main"
            android:textStyle="bold"
            android:paddingStart="@dimen/main_padding"
            android:paddingBottom="@dimen/main_padding"
            android:paddingTop="@dimen/secondary_padding"
            android:layout_marginBottom="24dp"
            />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/main_padding"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/themeSwitcher"
                style="@style/settings_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dark_theme"
                android:layout_gravity="start"
                android:paddingVertical="21dp"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="21dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/settings_option"
                android:text="@string/share"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share_24"
                android:id="@+id/share_icon"
                android:layout_gravity="end"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="21dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/settings_option"
                android:text="@string/support"
                />

            <ImageView
                android:id="@+id/support_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_support_24"
                android:layout_gravity="end"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="21dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/settings_option"
                android:text="@string/user_agreement"
                />

            <ImageView
                android:id="@+id/agreement_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_user_agreement_24"
                android:layout_gravity="end"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>