<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.mediateka.fragments.playlists.playlist.PlaylistScrFragment"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


            <ImageView
                android:id="@+id/pl_cover"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                android:src="@drawable/placeholder_45"
                />
            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_padding"
                android:layout_marginTop="@dimen/main_padding"

                android:src="@drawable/ic_back_arrow_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black" />
            <TextView
                android:id="@+id/pl_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_display_bold"
                android:textSize="24sp"
                android:textFontWeight="700"
                android:layout_marginStart="@dimen/main_padding"
                android:layout_marginTop="24dp"
                tools:text="@string/playlist_name"
                app:layout_constraintTop_toBottomOf="@+id/pl_cover"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/pl_desc"
                style="@style/text_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_padding"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pl_name"
                tools:text="@string/playlist_description" />

            <TextView
                android:id="@+id/summ_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                style="@style/text_player"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/pl_desc"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/main_padding"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dot"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/summ_time"
                app:layout_constraintTop_toTopOf="@id/summ_time"
                app:layout_constraintBottom_toBottomOf="@id/summ_time"
                android:layout_marginHorizontal="5dp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/song_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                style="@style/text_player"
                android:textSize="18sp"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toEndOf="@+id/divider"
                app:layout_constraintTop_toTopOf="@id/summ_time"
                app:layout_constraintBottom_toBottomOf="@id/summ_time"
                android:textColor="@color/black"/>
            <ImageButton
                android:id="@+id/share_btn"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_share_24"

                android:layout_marginStart="@dimen/main_padding"
                android:layout_marginTop="@dimen/main_padding"
                app:layout_constraintTop_toBottomOf="@id/summ_time"
                app:layout_constraintStart_toStartOf="parent"
                app:tint="@color/black" />
            <ImageButton
                android:id="@+id/menu_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"


                android:src="@drawable/ic_tridot_24"
                android:layout_marginTop="@dimen/main_padding"
                android:layout_marginStart="@dimen/main_padding"

                app:layout_constraintTop_toBottomOf="@id/summ_time"
                app:layout_constraintStart_toEndOf="@id/share_btn"
                app:tint="@color/black"/>





        </androidx.constraintlayout.widget.ConstraintLayout>




    </ScrollView>




    <LinearLayout
        android:id="@+id/playlist_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        app:behavior_hideable="false"
        app:behavior_peekHeight="100dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/bottom_sheet_bar_background" />

        <TextView
            android:id="@+id/pl_placeholder"
            style="@style/tablayout_text"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/pl_empty"
            android:textAlignment="center"
            android:textColor="@color/text_menu"
            android:textSize="@dimen/ph_text" />



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/song_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />

    </LinearLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/tint"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/menu_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet"
        android:backgroundTint="@color/background_menu"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        app:behavior_hideable="true"
        android:visibility="visible"
        app:behavior_peekHeight="505dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bottom_sheet_bar_background" />

        
        <include
            android:id="@+id/included"
            layout="@layout/bottom_sheet_playlist_view"/>
        <TextView
            android:id="@+id/bottom_sheet_share_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pl_share"
            style="@style/text_player"
            android:layout_marginTop="29dp"
            android:layout_marginBottom="21dp"
            android:layout_marginHorizontal="@dimen/main_padding"
            />
        <TextView
            android:id="@+id/bottom_sheet_edit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pl_edit_info"
            style="@style/text_player"
            android:layout_marginVertical="21dp"
            android:layout_marginHorizontal="@dimen/main_padding"


            />
        <TextView
            android:id="@+id/bottom_sheet_delete_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pl_delete"
            style="@style/text_player"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="100dp"
            android:layout_marginHorizontal="@dimen/main_padding"

            />



        

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>