<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_menu">

    <ImageView

        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_padding"
        android:layout_marginTop="@dimen/main_padding"
        android:src="@drawable/ic_back_arrow_24"
        app:layout_constraintEnd_toStartOf="@+id/new_playlist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/new_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:paddingStart="@dimen/main_padding"
        android:paddingTop="@dimen/secondary_padding"
        android:paddingBottom="@dimen/main_padding"
        android:text="@string/playlist_new"
        android:textAllCaps="false"
        android:textColor="@color/text_menu"
        android:textSize="@dimen/text_main"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/back_arrow"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/cover_container"
        android:layout_width="@dimen/player_cover_size"
        android:layout_height="@dimen/player_cover_size"
        android:layout_marginVertical="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/new_playlist"


        >

        <ImageView
            android:id="@+id/cover_img"
            android:layout_width="@dimen/player_cover_size"
            android:layout_height="@dimen/player_cover_size"
            android:layout_gravity="center"
            android:background="@drawable/rounded_dash_rectangle"
            android:clipToOutline="true"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/cover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_add_image_80"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </FrameLayout>


    <TextView
        android:id="@+id/name_tooltip"
        style="@style/helper_text_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_padding"

        android:layout_marginBottom="-8.5dp"
        android:background="@color/background_menu"
        android:elevation="0.1dp"
        android:paddingHorizontal="4dp"
        android:text="@string/playlist_name"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/pl_name"
        app:layout_constraintStart_toStartOf="@id/pl_name" />


    <EditText
        android:id="@+id/pl_name"
        style="@style/text_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_padding"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_rectangle"
        android:hint="@string/playlist_name"
        android:maxLines="1"
        android:textColor="@color/text_menu"

        android:textColorHint="@color/text_menu"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/cover_container" />

    <TextView
        android:id="@+id/desc_tooltip"
        style="@style/helper_text_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_padding"
        android:layout_marginBottom="-8.5dp"
        android:background="@color/background_menu"
        android:elevation="0.1dp"
        android:paddingHorizontal="4dp"
        android:text="@string/playlist_description"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/pl_desc"
        app:layout_constraintStart_toStartOf="@id/pl_desc" />

    <EditText
        android:id="@+id/pl_desc"
        style="@style/text_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_padding"
        android:background="@drawable/rounded_rectangle"
        android:hint="@string/playlist_description"
        android:textColor="@color/text_menu"
        android:textColorHint="@color/text_menu"
        app:layout_constraintTop_toBottomOf="@id/pl_name" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create_pl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_padding"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_create_selector"

        android:text="@string/create"
        android:textColor="@color/white"
        android:textSize="@dimen/text_regular"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>